@@ -792,7 +792,7 @@ Optionally restricts open access to only the listed profile names (separated by 
 </a>
 
 <a name="user-manager/auth-config/user">
-<div class='indent'><strong>user-manager/auth-config/user (attributes: *name, *password, display-name, ip-mask, profiles, max-connections, admin, enabled, map-exclude, start-date, expiration-date, debug)</strong></div><br />
+<div class='indent'><strong>user-manager/auth-config/user (attributes: *name, *password, display-name, ip-mask, profiles, max-connections, admin, enabled, map-exclude, start-date, expiration-date, ecm-rate, debug)</strong></div><br />
 One user definition for the SimpleUserManager (also used by the XmlUserManager, see <strong>README.XmlUserManager.txt</strong> for more details):<br /><br />
 - <strong class='bold'>name</strong>: User name, avoid long names, spaces and special characters. There are no particular limitations as far as the proxy is concerned, but the camd clients may have them.<br />
 - <strong class='bold'>password</strong>: Avoid special characters.<br />
@@ -804,6 +804,7 @@ One user definition for the SimpleUserManager (also used by the XmlUserManager, 
 - <strong class='bold'>enabled</strong>: true/false (default: true). Allows disabling of accounts without deleting them.<br />
 - <strong class='bold'>map-exclude</strong>: true/false (default: false). Set to true to prevent the user from causing changes to the service maps. If a particular user is sending bad ecms or is otherwise misbehaving, this will protect the service mappings and ensure no other users are affected. Only use this if you are sure a particular client is misbehaving, the service mapping can't work if no clients are allowed to update the map.<br />
 - <strong class='bold'>start-date</strong>: (dd-mm-yyyy) Start date for user account.<br />
+- <strong class='bold'>ecm-rate</strong>: Minimum interval between ecm's in seconds (disabled by default).<br />
 - <strong class='bold'>expiration-date</strong>: (dd-mm-yyyy) Expiration date for the user account.<br /> 
 - <strong class='bold'>debug</strong>: true/false (default: false). Set to true to enable ecm/emm/zap logging for this user only (has no effect if these are already enabled globally).<br />
 <br />
