@@ -28,7 +28,8 @@ Cardservproxy changelog:
 - Added: More sanity checks to DcwFilterPlugin (checksums, length and an option to monitor all replies for duplicates).
 - Added: DreamboxPlugin (csp-agent) support for more/older dm500 images. Basic (unsecured) file upload support.
 - Added: proxy-reference.html updated with highlighting for important elements and additional examples.
-- Added: Ability to set start and expiration date for user accounts.
+- Added: Ability to set start and expiration date for user accounts (only Simple and XmlUsermanager).
+- Added: Ability to set minimum interval between ecm's in seconds (ecm-rate).
 
 - Changes to proxy.xml:
   Added: Attribute 'enable-service-linking' to <cache-handler> (true/false, default: false). Enables sid cache linker.
